# parkinson-detector

./: .gitignore  MODEL_CARD.md  Makefile  README.md  copy_of_con_ai_piyush_satti_40234775_project_5_parkinson.py  pyproject.toml  requirements.txt
data/: README_DATA.md
docs/: Architecture.md  COLLAB.md  CONTRIBUTING.md  DATA.md
recipes/parkinsons_binary/ecapa_tdnn/: train.py
recipes/parkinsons_binary/ecapa_tdnn/hparams/: train.yaml
recipes/parkinsons_binary/hubert/hparams/: train.yaml
recipes/parkinsons_binary/wav2vec2/: train.py
recipes/parkinsons_binary/wav2vec2/hparams/: train.yaml
recipes/parkinsons_binary/wavlm/hparams/: train.yaml
recipes/parkinsons_binary/xvector/: train.py
recipes/parkinsons_binary/xvector/hparams/: train.yaml
reports/: results.md
scripts/: download_dataset.sh  predict.py  prepare_manifests.py  run_all.sh  smoke_check.sh
src/parkinsons_speech/: __init__.py  data_prep.py  eval.py  utils.py
