[tool.poetry]
name = "parkinsons-speechbrain"
version = "0.1.0"
description = "SpeechBrain recipes for Parkinson's speech classification"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "parkinsons_speech", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
speechbrain = "0.5.16"
torch = ">=2.9.1"
torchaudio = ">=2.9.1"
scikit-learn = "1.4.2"
pandas = "2.2.2"
numpy = "1.26.4"
hyperpyyaml = "1.2.2"
huggingface-hub = "0.22.2"
soundfile = "0.12.1"
ruamel-yaml = "0.17.40"
torchvision = "^0.24.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
